2019-11-13  Richard Sandiford  <richard.sandiford@arm.com>

	* config/aarch64/aarch64-sve-builtins-functions.h
	(unary_count::expand): Use aarch64_sve_int_mode instead of
	mode_for_int_vector.

2019-11-13  Martin Liska  <mliska@suse.cz>

	* opts.c: Update comment about OPT_LEVELS_2_PLUS_SPEED_ONLY.

2019-11-13  Martin Liska  <mliska@suse.cz>

	* tree-streamer-in.c (lto_input_ts_function_decl_tree_pointers):
	Remove call to finalize_options_struct.

2019-11-13  Georg-Johann Lay  <avr@gjlay.de>

	PR target/92055
	* config/avr/t-avr (avr-mcus): Do not depend on
	$(srcdir)/config/avr/t-multilib.

2019-11-13  Richard Biener  <rguenther@suse.de>

	PR tree-optimization/92473
	* tree-vect-loop.c (vect_create_epilog_for_reduction): Perform
	direct optab reduction in the correct type.

2019-11-12  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/rs6000.md (rs6000_set_fpscr_drn): Use ULL on big
	hexadecimal literal.

2019-11-12  Segher Boessenkool  <segher@kernel.crashing.org>

	* config/rs6000/vsx.md (xscmpexpdp_<code> for CMP_TEST): Handle
	UNORDERED if !HONOR_NANS (DFmode).
	(xscmpexpqp_<code>_<mode> for CMP_TEST and IEEE128): Handle UNORDERED
	if !HONOR_NANS (<MODE>mode).

2019-11-12  Jan Hubicka  <hubicka@ucw.cz>

	* ipa-cp.c (ignore_edge_p): Also look for optimize flag.
	(ipcp_verify_propagated_values): Likewise.
	(propagate_constants_across_call): Likewise.
	(propagate_constants_topo): Likewise.
	(ipcp_propagate_stage): Likewise.

2019-11-12  Jan Hubicka  <hubicka@ucw.cz>

	PR ipa/92471
	* ipa-profile.c (check_argument_count): Break out from ...;
	watch for missing summaries.
	(ipa_profile): Here.

2019-11-12  Martin Sebor  <msebor@redhat.com>

	PR tree-optimization/92412
	* targhooks.c (default_ref_may_alias_errno): Errono can only alias
	extern variables.

2019-11-12  Martin Sebor  <msebor@redhat.com>

	PR middle-end/83688
	* gimple-ssa-sprintf.c (format_result::alias_info): New struct.
	(directive::argno): New member.